--- a/src/Reto.ipynb
+++ b/src/Reto.ipynb
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -132,6 +132,7 @@
         "ROOT_DIR = Path.cwd()  # Directorio raíz del proyecto\n",
         "DATA_DIR = ROOT_DIR.parent / 'data'  # Directorio de datos\n",
         "MODELS_DIR = ROOT_DIR.parent / 'models'  # Directorio de modelos\n",
+        "os.makedirs(MODELS_DIR, exist_ok=True)\n",
         "DATA_DIR"
       ]
     },
@@ -430,15 +431,13 @@
         "id": "qcDaRPxaRguF"
       },
       "source": [
+        "**Ahora usemos una red preentrenada como base y agregamos nuestro modelo secuencial**\n",
         "Recordemos las definiciones de nuestras capas:\n",
         "\n",
-        "- **Conv2D:** Aplica filtros aprendibles para extraer características de la imagen.\n",
-        "- **Pooling (MaxPooling2D):** Reduce la dimensión espacial, ayudando a la invariancia a traslaciones y reduciendo el cómputo. Existen otros tipos de pooling que también pueden implementar en la arquitectura como AveragePooling2D, GlobalMaxPooling2D y GlobalAveragePooling2D.\n",
-        "- **Flatten:** Convierte la salida multidimensional en un vector unidimensional.\n",
+        "- **Pooling (MaxPooling2D):** Reduce la dimensión espacial, ayudando a la invariancia a traslaciones y reduciendo el cómputo. Existen otros tipos de pooling que también se pueden implementar en la arquitectura como AveragePooling2D, GlobalMaxPooling2D y GlobalAveragePooling2D.\n",
         "- **Dense:** Capas completamente conectadas para la clasificación.\n",
         "- **Dropout:** Regularización para prevenir el sobreajuste.\n",
-        "\n",
-        "**Ahora usemos una red preentrenada como base y agregamos nuestro modelo secuencial**"
+        "\n"
       ]
     },
     {
@@ -643,6 +642,13 @@
         "model_checkpoint_transfer_learning = ModelCheckpoint(MODELS_DIR / 'best_model_tl.h5', save_best_only=True, monitor='val_loss', mode='min')\n",
         "\n",
         "callbacks_transfer_learning = [model_checkpoint_transfer_learning, early_stopping, reduce_lr]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Entrenamiento "
       ]
     },
     {
@@ -874,6 +880,13 @@
         "plt.title('Training and Validation Loss')\n",
         "\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluación (test)"
       ]
     },
     {
